Fix Color Contrast

--- a/css/styless.css
+++ b/css/styless.css
@@ -26,7 +26,7 @@ h1 {
   font-size: 56px;
   line-height: 64px;
   letter-spacing: 0.37px;
-  color: #ff6b00;
+  color: #B3612E;
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -272,7 +272,7 @@ li {
   width: auto;
   height: 40px;
   background: #fff;
-  border: 1px solid #8993a4;
+  border: 1px solid #1B62D0;
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -314,7 +314,7 @@ li {
   align-items: center;
   text-align: center;
   letter-spacing: 0.03em;
-  background: #ff6b00;
+  background: #B3612E;
   width: 124px;
   height: 48px;
   color: #fff;
@@ -390,7 +390,7 @@ li {
   top: 0;
   color: white;
   font-size: 20px;
-  background: #ff6b00;
+  background: #B3612E;
   border: 1px;
 }
 
@@ -417,7 +417,7 @@ li {
   font-size: 72px;
   line-height: 88px;
   letter-spacing: 0.37px;
-  color: #ff6b00;
+  color: #B3612E;
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -441,7 +441,7 @@ li {
   padding: 12px;
   width: 161px;
   height: 48px;
-  background: #ff6b00;
+  background: #B3612E;
   flex: none;
   order: 2;
   flex-grow: 0;
@@ -565,7 +565,7 @@ li {
   padding: 12px;
   width: 131px;
   height: 48px;
-  background: #ff6b00;
+  background: #B3612E;
   flex: none;
   order: 2;
   flex-grow: 0;
